models + controller created

--- a/WebAppRezeptSammlungMVC/appsettings.json
+++ b/WebAppRezeptSammlungMVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebAppRezeptSammlungMVCContext": "Server=(localdb)\\mssqllocaldb;Database=WebAppRezeptSammlungMVCContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
